<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cordinate</name>
  <version>1.1.0</version>
  <description>
    convert cordinates between frenet and global
  </description>
  <maintainer email="joebetz@seas.upenn.edu">JaeseoShin</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/vesc</url>
  <author email="hxue@ucsd.edu">tlswotj4636@naver.com</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
